--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,10 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-
+     
     </div>
     <script type="module" src="./src/index.jsx"></script>
+    <!-- add by suraj for payment gatway -->
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </body>
 </html>
